--- a/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.html
@@ -27,5 +27,5 @@
   <div class="divider"></div>
 
   <div class="zoom-label">Zoom</div>
-  <md-slider (mousewheel)="mouseWheel($event)" [min]="1" [max]="10" [step]="1" [value]="zoomLevel" (change)="zoomChanged.emit($event.value)"></md-slider>
+  <input (mousewheel)="mouseWheel($event)" type="range" min="1" max="10" step="1" value="{{zoomLevel}}" (change)="zoomChanged.emit($event.target.value)">
 </div>
