--- a/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.scss
@@ -98,3 +98,88 @@
 .saving {
   margin-left: 8px;
 }
+
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 5.8px 0;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2.4px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  background: #fd572f;
+  border-radius: 9.9px;
+  border: 0px solid #c56e01;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+  border: 1px solid rgba(0, 0, 0, 0);
+  height: 14px;
+  width: 14px;
+  border-radius: 50px;
+  background: #fd572f;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -5.8px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #fd572f;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 2.4px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  background: #fd572f;
+  border-radius: 9.9px;
+  border: 0px solid #c56e01;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+  border: 1px solid rgba(0, 0, 0, 0);
+  height: 14px;
+  width: 14px;
+  border-radius: 50px;
+  background: #fd572f;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 2.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #fd572f;
+  border: 0px solid #c56e01;
+  border-radius: 19.8px;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: #fd572f;
+  border: 0px solid #c56e01;
+  border-radius: 19.8px;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+  border: 1px solid rgba(0, 0, 0, 0);
+  height: 14px;
+  width: 14px;
+  border-radius: 50px;
+  background: #fd572f;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #fd572f;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #fd572f;
+}
+
