--- a/src/app/navigation/topnav/profile-dropdown/profile-dropdown.component.scss
+++ b/src/app/navigation/topnav/profile-dropdown/profile-dropdown.component.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: 70px;
   cursor: pointer;
-  transition: background, box-shadow 0.25s ease-in-out;
+  transition: background 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
 
   &--active {
     background: #F7F7F7;
@@ -14,16 +14,15 @@
     align-items: center;
     padding: 0 10px;
     height: 70px;
+    color: white;
+    font-weight: 500;
+    transition: color 0.25s ease-in-out;
 
     &__image {
       margin-right: 8px;
       width: 40px;
       height: 40px;
       border-radius: 50%;
-    }
-
-    &__hello {
-      font-weight: 300;
     }
 
     &__name {
@@ -35,7 +34,11 @@
       font-size: 18px;
       width: 18px;
       height: 18px;
-      transition: 0.2s ease-in-out;
+      transition: all 0.25s ease-in-out;
+    }
+
+    &--active {
+      color: #4A4A4A;
     }
 
     .arrow--rotate {
