--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -64,6 +64,7 @@ $main-color: #9B9A9B;
       &__icon {
         cursor: pointer;
         vertical-align: middle;
+        color: white;
       }
 
       &__menu {
@@ -125,8 +126,19 @@ $main-color: #9B9A9B;
 
   &__search {
 
+    &__wrapper {
+      display: flex;
+      align-items: center;
+      padding: 2px 10px;
+      background: #759BCE;
+      height: 40px;
+      border-radius: 3px;
+      margin-right: 16px;
+    }
+
     &__container {
       position: relative;
+      margin-left: 12px;
 
       autocomplete {
         position: absolute;
@@ -142,27 +154,18 @@ $main-color: #9B9A9B;
 
     &__input {
       width: 200px;
+      color: white;
     }
 
     &__icon {
-      color: $main-color;
+      color: white;
     }
-  }#9B9A9B
-
-  &__separator {
-    display: inline-block;
-    margin-left: 15px;
-    margin-right: 15px;
-    width: 1px;
-    height: 40px;
-    vertical-align: middle;
-    background: $main-color;
   }
 
   &__notifications {
     position: relative;
     display: inline-block;
-    color: $main-color;
+    color: white;
     cursor: pointer;
 
     &__count {
@@ -180,4 +183,8 @@ $main-color: #9B9A9B;
       color: #ffffff;
     }
   }
+}
+
+.support-dropdown {
+  margin: 0 16px 0 8px;
 }
