--- a/src/app/navigation/sidenav/sidenav-item/sidenav-item.component.html
+++ b/src/app/navigation/sidenav/sidenav-item/sidenav-item.component.html
@@ -2,8 +2,9 @@
   <md-icon *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
   <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title | translate }}</span>
 </a>
-<a md-list-item [class.icon--solo]="!full" *ngIf="hasLink && !hasChildren && !hasQuery" routerLinkActive="active" (toggle)="true" (click)="clicked($event)">
-  <md-icon *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
+<a md-list-item [class.item-selected]="selected" [class.icon--solo]="!full" *ngIf="hasLink && !hasChildren && !hasQuery" routerLinkActive="active" (toggle)="true" (click)="clicked($event)">
+  <div *ngIf="selected" class="selected-placeholder"></div>
+  <md-icon class="image-icon" *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
   <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title | translate}}</span>
 </a>
 <a md-list-item [class.icon--solo]="!full" *ngIf="hasLink && !hasChildren && hasQuery" routerLinkActive="active" (toggle)="true">
