--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -9,7 +9,7 @@ $sidebar-color-dark: #171F38;
 
 $sidebar-color: #fff;
 $sidebar-text-color: #9B9B9B;
-$sidebar-text-color-hover: #5AA3E8;
+$sidebar-text-color-hover: #5383C3;
 
 $navigation-color: #5383C3;
 
@@ -90,6 +90,12 @@ md-sidenav-layout {
   background-color: rgb(250, 250, 250);
 }
 
+.item-selected {
+  .md-list-item {
+    padding-left: 0 !important;
+  }
+}
+
 md-nav-list.side-navigation {
   width: 100%;
   padding-top: 0;
@@ -111,8 +117,6 @@ md-nav-list.side-navigation {
 
     > i.material-icons:last-child {
       line-height: 40px;
-      //position: absolute;
-      //right: 20px;
       transition: .4s transform cubic-bezier(.25, .8, .25, 1);
       &:before {
         content: "keyboard_arrow_down";
@@ -155,6 +159,13 @@ md-nav-list.side-navigation {
         font-size: 0.7em;
       }
     }
+    &.level1 .item-selected > .md-list-item {
+      padding-left: 0 !important;
+
+      .selected-placeholder {
+        margin-right: 26px;
+      }
+    }
     &.level2 a > .md-list-item {
       padding-left: $base-padding-left + 15px !important;
       background-color: darken($sidebar-color, $base-color-change * 2);
@@ -166,6 +177,11 @@ md-nav-list.side-navigation {
       .sidenav-item__text {
         width: 140px;
         font-size: 0.7em;
+      }
+    }
+    &.level2 a > .md-list-item {
+      .selected-placeholder {
+        margin-right: 33px !important;
       }
     }
     &.level3 a > .md-list-item {
