Work on dashboard dual graph

--- a/src/app/pages/dashboard-page/dashboard-dual-graph/dashboard-dual-graph.component.html
+++ b/src/app/pages/dashboard-page/dashboard-dual-graph/dashboard-dual-graph.component.html
@@ -1,3 +1,3 @@
 <div>
-  <chart #chartI class="dashboard-chart" [options]="options" (load)="loadChart(chartI)"></chart>
+  <chart *ngIf="options" #chartI class="dashboard-chart" [options]="options" (load)="loadChart(chartI)"></chart>
 </div>
