--- a/src/app/pages/dashboard-page/dashboard-header/dashboard-header.component.html
+++ b/src/app/pages/dashboard-page/dashboard-header/dashboard-header.component.html
@@ -25,5 +25,8 @@
       (selected)="querySelected.emit($event)">
     </dashboard-header-dropdown>
   </div>
-  <div class="dashboard-message">Fortune sides with him who dares.</div>
+  <div class="dashboard-message">
+    <div>Fortune sides with him who dares.</div>
+    <div>-Virgil</div>
+  </div>
 </div>
