--- a/src/app/pages/dashboard-page/dashboard-header/dashboard-header.component.scss
+++ b/src/app/pages/dashboard-page/dashboard-header/dashboard-header.component.scss
@@ -32,4 +32,9 @@
   font-style: italic;
   font-size: 24px;
   font-weight: 300;
+  text-align: right;
+
+  div:last-of-type {
+    font-size: 16px;
+  }
 }
