--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -12,8 +12,8 @@
   <div class="info">
     <div>Welcome back, {{name}}</div>
     <div>{{totalAmount.usd()}}</div>
-    <div>Lifetime Total Revenue</div>
+    <div>{{revenueMessage}}</div>
   </div>
 
-  <dashboard-dual-graph></dashboard-dual-graph>
+  <dashboard-dual-graph [graphData]="data"></dashboard-dual-graph>
 </div>
