--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -302,8 +302,42 @@ $color-orange: #F16C00;
 }
 
 .dashboard-tooltip-text {
+  display: flex;
+  align-items: center;
   font-size: 24px;
   font-weight: 500;
+}
+
+.dashboard-tooltip-date {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.dashboard-label-icon-holder {
+  background: white;
+  border-radius: 50%;
+  width: 38px;
+  height: 38px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.28);
+  margin-left: 8px;
+  display: flex;
+
+  i {
+    margin: auto;
+    height: 22px;
+    width: 22px;
+    font-size: 22px;
+    color: #4A4A4A;
+  }
+
+  div {
+    margin: auto;
+    height: 22px;
+    line-height: 22px;
+    font-size: 26px;
+    font-weight: 600;
+    color: #4A4A4A;
+  }
 }
 
 .md-tooltip {
