Add dashboard issues componen

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -17,3 +17,6 @@
 
   <dashboard-dual-graph [graphData]="data"></dashboard-dual-graph>
 </div>
+
+<dashboard-issues-report [reports]="issueReports"></dashboard-issues-report>
+
