Fix terms and conditions acl dropdown component

--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.scss
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.scss
@@ -12,10 +12,10 @@
   &__acl-dropdown {
     position: absolute;
     top: 15px;
-    right: 15px;
+    right: 20px;
     width: 200px;
     font-size: 13px;
-    background: white;
+    background: #0C5FD2;
   }
 
   &__header {
