--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.scss
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.scss
@@ -36,3 +36,8 @@ spe-loader {
 .entity-view__header__title {
   margin-top: 27px;
 }
+
+schedules-detailed {
+  display: block;
+  background: #F3F3F3;
+}
